# ZUpdate

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/supersports/com/zupdate/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bsdiff.c  native-lib.c
app/src/main/java/supersports/com/zupdate/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/supersports/com/zupdate/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
